apps-1/voting-app/0-ns-voting.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voting
  labels:
    name: voting

# kubectl config set-context --current --namespace=voting
