apps-1/voting-app/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
spec:
  type: ClusterIP # NodePort
  ports:
  - name: "vote-service"
    port: 8080
    targetPort: 80
#   nodePort: 31000
  selector:
    app: vote
